--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -30,7 +30,9 @@
     "nuestros proyectos": "Our Proyects",
     "informacion sobre litio": "Information about Lithium",
     "medios": "Media",
-    "noticias": "Press"
+    "noticias": "Press",
+     "politica cookies": "Cookies Policy",
+    "faq for law": "Faq for law enforcement"
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
