--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -29,7 +29,9 @@
     "nuestros proyectos": "Nuestros Proyectos",
     "informacion sobre litio": "Información sobre el Litio",
     "medios": "Medios",
-    "noticias": "Noticias"
+    "noticias": "Noticias",
+    "politica cookies": "Política de Cookies",
+    "faq for law": "Preguntas frecuentes para las fuerzas del orden"
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
