advances on navbar button

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -32,7 +32,10 @@
     "medios": "Media",
     "noticias": "Press",
      "politica cookies": "Cookies Policy",
-    "faq for law": "Faq for law enforcement"
+    "faq for law": "Faq for law enforcement",
+      "iniciar sesion": "Log in",
+      "registrarse": "Sign up"
+    
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
