--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -31,7 +31,9 @@
     "medios": "Medios",
     "noticias": "Noticias",
     "politica cookies": "Política de Cookies",
-    "faq for law": "Preguntas frecuentes para las fuerzas del orden"
+    "faq for law": "Preguntas frecuentes para las fuerzas del orden",
+    "iniciar sesion": "Iniciar sesión",
+    "registrarse": "Registrarse"
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
