traducciones noticias sobre el litio

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -803,6 +803,13 @@
     "por que es tan importante el litio": "Why is lithium so important?",
     "p5": "Lithium has earned the designation of the 'white gold' of the 21st century due to its growing demand and essential role in the transition towards a sustainable energy model. This mineral is the foundation of lithium-ion batteries, an essential technology for electronic devices, electric vehicles, and renewable energy storage systems.",
     "p6": "In a world moving towards reducing its dependence on fossil fuels, lithium emerges as an essential resource for efficiently storing and managing energy, allowing its use when needed.",
-    "p7": "In this context, backing our cryptocurrency with the value and reserves of lithium represents a unique investment opportunity. It not only allows our users to participate in the digital financial ecosystem, but it also links their investment to a strategic resource whose value will continue to increase as global demand for sustainable energy solutions grows. By acquiring this cryptocurrency, our users become part of an innovative and responsible vision, aligned with a more sustainable and technologically advanced future."
+    "p7": "In this context, backing our cryptocurrency with the value and reserves of lithium represents a unique investment opportunity. It not only allows our users to participate in the digital financial ecosystem, but it also links their investment to a strategic resource whose value will continue to increase as global demand for sustainable energy solutions grows. By acquiring this cryptocurrency, our users become part of an innovative and responsible vision, aligned with a more sustainable and technologically advanced future.",
+      "noticias": "News about Lithium",
+      "p8": "Explore the latest trends and developments in the world of lithium, and stay up to date with the most relevant updates that are shaping the future of this industry.",
+      "p9": "Read more news",
+      "n1": "What is the mineral that could reach U$S 8.7 billion in exports by 2030",
+      "n2": "Rising lithium prices boost the Atómico3 cryptocurrency as a solid investment option",
+      "n3": "The completion of delayed projects is expected to restart following the regional increase in lithium prices"
+    
   }
 }
