--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -800,7 +800,13 @@
     "por que es tan importante el litio": "¿Por qué es tan importante el litio?",
     "p5": "El litio se ha ganado la denominación de 'oro blanco' del siglo XXI debido a su creciente demanda y su papel esencial en la transición hacia un modelo energético sostenible. Este mineral es la base de las baterías de ion-litio, una tecnología esencial para dispositivos electrónicos, vehículos eléctricos y sistemas de almacenamiento de energía renovable.",
     "p6": "En un mundo que avanza hacia la reducción de su dependencia de los combustibles fósiles, el litio se erige como un recurso esencial para almacenar y gestionar energía de manera eficiente, permitiendo su uso cuando se requiere.",
-    "p7": "En este contexto, respaldar nuestra criptomoneda en el valor y las reservas de litio representa una oportunidad única de inversión. No solo permite a nuestros usuarios participar en el ecosistema financiero digital, sino que también vincula su inversión con un recurso estratégico cuyo valor seguirá en aumento a medida que la demanda global por soluciones energéticas sostenibles continúe creciendo. Al adquirir esta criptomoneda, nuestros usuarios se convierten en parte de una visión innovadora y responsable, alineada con un futuro más sostenible y tecnológicamente avanzado."
+    "p7": "En este contexto, respaldar nuestra criptomoneda en el valor y las reservas de litio representa una oportunidad única de inversión. No solo permite a nuestros usuarios participar en el ecosistema financiero digital, sino que también vincula su inversión con un recurso estratégico cuyo valor seguirá en aumento a medida que la demanda global por soluciones energéticas sostenibles continúe creciendo. Al adquirir esta criptomoneda, nuestros usuarios se convierten en parte de una visión innovadora y responsable, alineada con un futuro más sostenible y tecnológicamente avanzado.",
+    "noticias": "Noticias sobre el Litio",
+    "p8": "Explora las últimas tendencias y novedades en el mundo del litio, y mantente al día con las novedades más relevantes que están marcando el futuro de esta industria",
+    "p9":"Leer más noticias",
+    "n1": "Cuál es el mineral que podría alcanzar los U$S 8.700 millones en exportaciones para 2030",
+    "n2": "Aumento del precio del litio impulsa a la criptomoneda Atómico3 como opción de inversión sólida",
+    "n3": "La concreción de proyectos que estaban demorados empezaría a reactivarse tras aumento regional en el precio del litio"
   }
   
 }
