--- a/src/translations/por/global.json
+++ b/src/translations/por/global.json
@@ -787,6 +787,14 @@
     "p5": "O lítio ganhou a denominação de 'ouro branco' do século XXI devido à sua crescente demanda e seu papel essencial na transição para um modelo energético sustentável. Este mineral é a base das baterias de íon-lítio, uma tecnologia essencial para dispositivos eletrônicos, veículos elétricos e sistemas de armazenamento de energia renovável.",
     "p6": "Em um mundo que avança na redução da dependência de combustíveis fósseis, o lítio se destaca como um recurso essencial para armazenar e gerenciar energia de maneira eficiente, permitindo seu uso quando necessário.",
     "p7": "Nesse contexto, respaldar nossa criptomoeda no valor e nas reservas de lítio representa uma oportunidade única de investimento. Não apenas permite que nossos usuários participem do ecossistema financeiro digital, mas também vincula seu investimento a um recurso estratégico cujo valor continuará a aumentar à medida que a demanda global por soluções energéticas sustentáveis continue crescendo. Ao adquirir essa criptomoeda, nossos usuários se tornam parte de uma visão inovadora e responsável, alinhada com um futuro mais sustentável e tecnologicamente avançado."
+    ,
+      "noticias": "Notícias sobre o Lítio",
+      "p8": "Explore as últimas tendências e novidades no mundo do lítio, e mantenha-se atualizado com as novidades mais relevantes que estão moldando o futuro dessa indústria",
+      "p9": "Ler mais notícias",
+      "n1": "Qual é o mineral que poderia alcançar US$ 8.700 milhões em exportações até 2030",
+      "n2": "Aumento do preço do lítio impulsiona a criptomoeda Atómico3 como opção de investimento sólido",
+      "n3": "A concretização de projetos que estavam demorando começaria a se reativar após o aumento regional no preço do lítio"
+      
   }
  
 }
