--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -793,7 +793,7 @@
     "proyectos de tokenizacion": "Tokenization Projects",
     "proyectos de": "Tokenization",
     "tokenizacion": "Projects",
-    "p1": "In this section, you will find information about the different Mining Tokenization Projects in which we have participated.",
+    "p1": "In this section you will find information about lithium, and soon about Tokenization Projects",
     "p2": "Learn more",
     "p3": "Tokenize my project",
     "que es el litio": "What is lithium?",
