--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -790,7 +790,7 @@
     "proyectos de tokenizacion": "Proyectos de tokenización",
     "proyectos de": "Proyectos de",
     "tokenizacion": "Tokenización",
-    "p1": "En esta sección encontrarás información sobre los distintos Proyectos de Tokenización mineros en los que hemos participado.",
+    "p1": "En esta sección encontrarás información sobre el litio, y proximamente sobre Proyectos de Tokenización",
     "p2": "Saber más",
     "p3": "Tokenizar mi proyecto",
     "que es el litio": "¿Qué es el litio?",
