--- a/src/translations/por/global.json
+++ b/src/translations/por/global.json
@@ -776,7 +776,7 @@
     "proyectos de tokenizacion": "Projetos de tokenização",
     "proyectos de": "Projetos de",
     "tokenizacion": "Tokenização",
-    "p1": "Nesta seção você encontrará informações sobre os diversos Projetos de Tokenização mineradora nos quais participamos.",
+    "p1": "Nesta seção você encontrará informações sobre lítio, e em breve sobre Projetos de Tokenização",
     "p2": "Saiba mais",
     "p3": "Tokenizar meu projeto",
     "que es el litio": "O que é o lítio?",
