--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -313,7 +313,7 @@
       "informacion punto 1": {
         "intro": "Este documento contiene la Política de Privacidad (la 'Política') que rige entre ATÓMICO3 S.A. ('Atómico'), en adelante 'Las Sociedades' y según corresponda en forma individual y separada, y a los usuarios el 'Usuario' o en plural, los 'Usuarios'), siempre que los Usuarios accedan o utilicen una o varias de las siguientes plataformas:",
         "punto i": "el sitio web",
-        "punto i link": "https://www.Atómico3.io ",
+        "punto i link": "https://www.atomico3.io ",
         "punto i tag": "('Sitio Web').",
         "punto ii": "la aplicación móvil de “Atómico”, disponible para su descarga a través de los dispositivos móviles donde esta se encuentre disponible (“App”).",
         "punto iii": "la plataforma de intercambio de activos digitales provista a través del sitio web https:// ('Exchange').",
