--- a/src/translations/por/global.json
+++ b/src/translations/por/global.json
@@ -298,7 +298,7 @@
       "informacion punto 1": {
         "intro": "Este documento contém a Política de Privacidade ('Política') que rege a relação entre ATÓMICO3 S.A. ('Atómico'), doravante denominadas 'As Sociedades', e os usuários ('Usuário' ou, no plural, 'Usuários') sempre que os Usuários acessarem ou utilizarem uma ou mais das seguintes plataformas:",
         "punto i": "o site",
-        "punto i link": "https://www.Atómico3.io ",
+        "punto i link": "https://www.atomico3.io ",
         "punto i tag": "('Site').",
         "punto ii": "o aplicativo móvel “Atómico”, disponível para download em dispositivos móveis onde estiver disponível ('App').",
         "punto iii": "a plataforma de intercâmbio de ativos digitais fornecida através do site https:// ('Exchange').",
