--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -222,7 +222,8 @@
     "medios": "Media",
     "por": "By",
     "m1": "Meeting between the President of the Latin American Lithium Chamber and the Secretary of Mining of Argentina",
-    "m2": "The Price of Lithium: A Market Perspective"
+    "m2": "The Price of Lithium: A Market Perspective",
+    "m3": "Lithium as a strategic commodity to develop the energy transition"
   },
   "team": {
     "nuestro equipo": "Our Team",
