--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -220,7 +220,8 @@
     "medios": "Medios",
     "por": "Por",
     "m1": "Encuentro entre el Presidente de la Cámara Latinoamericana del Litio y el Secretario de Minería de Argentina",
-    "m2": "El precio del litio: una visión de mercado"
+    "m2": "El precio del litio: una visión de mercado",
+    "m3": "El litio como commodity estratégico para desarrollar la transición energética"
   },
   "team": {
     "nuestro equipo": "Nuestro Equipo",
