--- a/src/translations/por/global.json
+++ b/src/translations/por/global.json
@@ -205,7 +205,8 @@
     "medios": "Mídia",
     "por": "Por",
     "m1": "Encontro entre o Presidente da Câmara Latino-Americana de Lítio e o Secretário de Mineração da Argentina",
-    "m2": "O preço do lítio: uma visão de mercado"
+    "m2": "O preço do lítio: uma visão de mercado",
+    "m3": "O lítio como commodity estratégica para desenvolver a transição energética"
   },
   "team": {
     "nuestro equipo": "Nossa Equipe",
